--- a/templates/web.lista.html
+++ b/templates/web.lista.html
@@ -28,6 +28,7 @@
                 <th width="">Participante(s)</th>
                 <th width="">Forma</th>
                 <th width="">Tipo</th>
+                <th width="">Cielo</th>  
                 <th width="">GerenciaNet</th>    
                 <th width="10">-</th>                           
             </tr>
@@ -39,6 +40,7 @@
                 <td style="text-align: left;"><a href="cadastro.clienteEdita.php?idCliente={ID_CLIENTE_HASH}">{PARTICIPANTE}</a></td></td>
                 <td style="text-align: left;">{FORMA}</td>
                 <td style="text-align: left;">{TIPO}</td>
+                <td style="text-align: left;">{TIDS}</td>    
                 <td style="text-align: left;">{CHARGE_IDS}</td>    
                 <td style="text-align: left;"><a href="web.editar.php?idVenda={ID_VENDA}" class="btn btn-default" title="Editar Pagamentos"><i class="icon-pencil"></i></a></td>             
             </tr>
