--- a/css/style.css
+++ b/css/style.css
@@ -3839,7 +3839,7 @@ Tags: 	hotel, resort, tour, tourism, tourist, tours website, travel, traveler, t
      margin-top: 50px;
 }
  .adding-form .addfor-bg {
-     background: #37b721 url("../images/bgimage/add.jpg");
+     background: #37b721 url("../images/bgimage/contacts.png");
      background-position: center center;
      background-repeat: no-repeat;
      background-size: cover;
