--- a/css/style.css
+++ b/css/style.css
@@ -4519,3 +4519,9 @@ Tags: 	hotel, resort, tour, tourism, tourist, tours website, travel, traveler, t
 .related-title h2 {
     margin-left: -32px;
 }
+.color-one {
+     color: #f17b37;
+}
+.color-two {
+     color: #37b721;
+}
