--- a/admin/templates/roteiro.html
+++ b/admin/templates/roteiro.html
@@ -43,7 +43,7 @@
     </div>
    
     <ul class="nav nav-tabs">
-        <li><a href="#home" data-toggle="tab">DADOS GERAIS</a></li>
+        <li class="active"><a href="#home" data-toggle="tab">DADOS GERAIS</a></li>
         <!-- BEGIN BLOCK_EDITAR_PILL -->
         <li><a href="#profile" data-toggle="tab">DADOS CARD</a></li>
         <li><a href="#messages" data-toggle="tab">DADOS ROTEIRO</a></li>
